# strong

./: .env.example  .gitignore  README.md  app.py  attendance_routes.py  database_models.py  gunicorn_config.py  models.py  pyproject.toml  render.yaml  requirements.txt  routes.py  ultra_cache.py  ultra_frontend_optimizer.py  ultra_response_optimizer.py
static/: manifest.json  sw.js
static/css/: custom.css  modern.css  pwa.css
static/js/: main.js
static/uploads/: .gitkeep
templates/: analytics.html  approval_requests.html  approval_requests_content.html  attendance.html  attendance_content.html  auto_payroll_simple.html  base.html  base_sidebar.html  compact_scanner.html  dashboard.html  dashboard_clean.html  dashboard_content.html  dashboard_fixed.html  dashboard_sidebar.html  download_page.html  employee_management.html  employee_qr_generator.html  employee_qr_generator_backup.html  employee_qr_generator_content.html  employee_qr_generator_new.html  employee_salary_dashboard.html  expense_management_dashboard.html  expense_setup.html  fulfillment_dashboard.html  import_orders.html  import_orders_progress.html  import_result.html  index.html  input_warehouse_rent.html  inventory_form.html  location_expense_dashboard.html  login.html  logo_settings.html  mass_upload_form.html  mass_upload_inventory.html  monitoring.html  monitoring_content.html  monitoring_detail.html  monitoring_old.html  operational_costs.html  (+89 more)
templates/audit/: packing_audit.html  picking_audit.html  scan_history_audit.html
